test/TestSuite/Syntax/Errors/resource_id_expected.tjp
project test "Test" "1.0" 2007-08-19 +2m 

task t "T" {
  start 2007-08-19
# MARK: error 6 resource_id_expected
	booking foo 2007-08-25-10:00 +2h
}

